notebook support